<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_container">

    <!-- Fragment Container -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- Bottom Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:weightSum="4"
        android:id="@+id/bottomnav"
        android:elevation="8dp">

        <!-- Home -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/home_layout"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:src="@drawable/baseline_home_24"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="12sp"/>
        </LinearLayout>

        <!-- Menu -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/menu_layout"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:src="@drawable/baseline_menu_24"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:textSize="12sp"/>
        </LinearLayout>

        <!-- Orders -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/orders_layout"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:src="@drawable/order"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orders"
                android:textSize="12sp"/>
        </LinearLayout>

        <!-- Dashboard -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/dashboard_layout"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:src="@drawable/dashboard"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="12sp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
